--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,19 +7,19 @@ on:
 
 jobs:
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone repository to virtual machine
-        uses: actions/checkout@v2
-      - name: Use nodejs 16.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - name: Setup
-        run: npm ci
-      - name: test
-        run : npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Clone repository to virtual machine
+  #       uses: actions/checkout@v2
+  #     - name: Use nodejs 16.x
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 16.x
+  #     - name: Setup
+  #       run: npm ci
+  #     - name: test
+  #       run : npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
       
 
 
